# led-audio-server

./: CMakeLists.txt
ffts/: CMakeLists.txt
ffts/src/: ffts.c  ffts_internal.h
server/: CMakeLists.txt  SerialPort.cpp  audioprocessor.cpp  audioprocessor.h  ledserver.manifest  ledservermain.cpp  platform.h  timer.h
